📱 fix: correction alignment information commit

--- a/src/components/commit/style.module.scss
+++ b/src/components/commit/style.module.scss
@@ -40,7 +40,7 @@
     align-items: center;
     justify-content: center;
 
-    gap: 30px;
+    gap: 20px;
 
     text-align: center;
     user-select: none;
@@ -61,6 +61,14 @@
       .repositoryName {
         word-break: break-all;
       }
+    }
+
+    .information {
+      align-items: flex-end;
+    }
+
+    .dateTime {
+      align-items: flex-start;
     }
 
     .avatar {
